--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   password_hash_plus: ^4.0.0
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.2.2
+  dash_chat_2: ^0.0.20
+  chat_gpt_sdk: ^3.0.3
 
 dev_dependencies:
   flutter_test:
