--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   shared_preferences: ^2.2.2
   dash_chat_2: ^0.0.20
   chat_gpt_sdk: ^3.0.3
+  expandable_text: ^2.3.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
