--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   chat_gpt_sdk: ^3.0.3
   expandable_text: ^2.3.0
   flutter_rating_bar: ^4.0.1
+  data_filters: ^1.0.2
 
 dev_dependencies:
   flutter_test:
