--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   expandable_text: ^2.3.0
   flutter_rating_bar: ^4.0.1
   data_filters: ^1.0.2
+  flutter_chat_ui: ^1.6.12
+  timeago: ^3.6.1
 
 dev_dependencies:
   flutter_test:
