--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,12 @@ dependencies:
   data_filters: ^1.0.2
   flutter_chat_ui: ^1.6.12
   timeago: ^3.6.1
+  razorpay_flutter: ^1.3.6
+  file_picker: ^8.0.3
+  flutter_file_downloader: ^1.2.1
+  flutter_phone_direct_caller: ^2.1.1
+  google_generative_ai: ^0.3.3
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
